# homeanalyzer

./: .gitignore  BACKLOG.md  CHANGELOG.md  CONTEXT.md  DECISIONS_LOG.md  OPERATIONS.md  PROJECT_BRIEF.md  README.md  V2_BACKLOG.md
.github/workflows/: ci.yml
backend/: .env.example  nixpacks.toml  pyproject.toml  railway.json
backend/app/: config.py  deps.py  main.py  notifications.py
backend/app/db/: supabase.py  users.py
backend/app/llm/: compare.py  extract.py  floor_plan.py  synthesize.py  vision.py  whisper.py
backend/app/providers/: meeting.py  meetingbaas.py
backend/app/realtime/: extractor.py  state.py  tokens.py
backend/app/routes/: audio.py  compare.py  debug.py  houses.py  invites.py  me.py  measured_floorplan.py  realtime.py  share.py  streams.py  tours.py  video.py  webhooks.py
backend/app/services/: apify.py  browserless.py  geocode.py  listing.py  mapbox.py  routing.py  storage.py  zoom.py
backend/scripts/: smoke.py
docs/: floorplan-slam-research.md
frontend/: instrumentation-client.ts  instrumentation.ts  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: address-autocomplete.tsx  house-photo.tsx  live-refresh.tsx  mobile-nav.tsx  refresh-on-visibility.tsx  score-badge.tsx  status-pill.tsx
frontend/lib/: api-client.ts  api-server.ts  api.ts  floor-plan-merge.ts  types.ts
modal_apps/: floor_plan.py
supabase/migrations/: 0001_init.sql  0002_storage_and_dev_policies.sql  0003_realtime_publication.sql  0004_realtime_meeting_columns.sql  0011_price_kind.sql  (+12 more)
(+60 files in other folders)
