[project]
name = "homeanalyzer-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "openai>=2.32.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.26",
    "sentry-sdk[fastapi]>=2.58.0",
    "supabase>=2.29.0",
    "uvicorn[standard]>=0.46.0",
]
